Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42330

QPainter::SmoothPixmapTransform is not smooth at over 2x downscaling

    XMLWordPrintable

Details

    • macOS

    Description

      QPainter::setRenderHint(QPainter::SmoothPixmapTransform) has no effect whatsoever when painting a QPixmap when QPainter scale is less than 1.0

      When the included project is compiled with Qt4, the results are exceptional. When compiled with Qt 5.3.2 the results are unacceptable.

      Attachments

        1. HorridCanvas.zip
          1 kB
        2. Qt4-vs-Qt5.png
          Qt4-vs-Qt5.png
          20 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            sosukodo Christopher
            Votes:
            6 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes